# rusty-dex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: access_flags.rs  adler32.rs  class_def.rs  code_item.rs  constants.rs  dex_classes.rs  dex_fields.rs  dex_file.rs  dex_header.rs  dex_methods.rs  dex_protos.rs  dex_reader.rs  dex_strings.rs  dex_types.rs  disasm.rs  endianness.rs  error.rs  field_id.rs  instructions.rs  lib.rs  main.rs  map_list.rs  method_handle.rs  method_id.rs  mutf8.rs  opcodes.rs  proto_id.rs  strings.rs  type_id.rs
src/dex/: access_flags.rs  classes.rs  code_item.rs  fields.rs  file.rs  header.rs  instructions.rs  map_list.rs  method_handle.rs  methods.rs  mod.rs  opcodes.rs  protos.rs  reader.rs  strings.rs  types.rs
src/logging/: mod.rs
tests/: multidex.rs
