[package]
name = "dex_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
chrono = "0.4.23"
colored = "2.0.0"
zip = "0.6.4"
residua-mutf8 = "2"
clap = { version = "4.5.4", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.3"

# [build-dependencies]
# bindgen = "0.63.0"
